** April 4, 2013 **
iperf display implemented
- scaled to 50,000,000
- update rate is every 2s
- the display does not draw until receiving 2 buffers of data (this way if there is a stale buffer it doesn't get displayed)
- duration is 10000 seconds. seems like there is no need for a button to restart?
- displaying 10s data
- if the data underruns (either because the server response is too slow or because the iperf data stops being updated) the display draws 0s
- seeing the data stall a lot (timestamp and end-time remain the same through many fetches)

** April 4, 2013 **
Fix issues:
	305 - "close x" now unselects flow. double click to delete a flow
	323 - gui now recovers on timeout errors and polls again
	324 - fixed problem with added flows not displaying
	325 - fixed logic displaying flows in topology view

** March 28, 2013 **
- add and delete flow implemented
- to add flow
	- mouse down in src edge switch
	- drag to dst edge switch
	- release/confirm to create flow
- to delete flow
	- select flow in flow chooser
	- click "close" button in flow table
	- confirm
- same "pending" style as other actions

** March 28, 2013 **
- basic flow chooser
	- click in "eye" to show full list
	- click on "eye" in full list to monitor that flow in the top slot (and show the flow in topology)
		- other flows get pushed down one slot
		- when a flow is pushed off the list, it is no longer displayed in topology
- bug fix for link disappearing after being added
- color improvements
- draw vector while linking to make it clearer what's going to happen

** March 27, 2013 **
- click onos node "eye" icon to highlight switches associated with that controller
- double click onos node else where to activate/deactivate
- double click core switch to activate/deactivate
- mouse down on switch, drag to other switch, mouse up to make link up/down
	allowed links are
		aggregation->core (link up/down)
		core->core (link up/down)